Fixed layout in different res and make work on ie

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -101,6 +101,8 @@ body {
 
 #handleOpenNav {
   margin-top: 20px;
+  font-size: 17px;
+  font-weight: bold;
   &:hover {
     cursor: pointer;
     color: $button-blue;
@@ -125,12 +127,9 @@ body, html{
 .time {
   font-size: 70px;
   margin-top: -100px;
-  padding-top: 100px;
+  padding-top: 80px;
   @media screen and (max-width: 500px) {
-      font-size: 30pt;
-    }
-  @media screen and (min-width: 1601px) {
-    margin-right: 30px;
+    font-size: 45px;
   }
 }
 
@@ -186,6 +185,7 @@ input {
   @extend .timer-btn;
   color: #c5c8cc;
   cursor: not-allowed !important;
+  display: none;
 }
 
 .small-text {
@@ -198,29 +198,19 @@ html{
 	background-color: rgba(8,8,8,1.0);
 }
 
+.table {
+  display: flex;
+  justify-content: center;
+}
+
 ul{
-	height: 100%;
-	width: 100%;
-	display: block;
-  margin: 0 auto;
-  position: fixed;
-  top: -20vh;
-  left: -4vw;
   pointer-events: none;
-
-  @media screen and (max-width: 1200px) {
-    left: -6vw;
-  }
-
-  @media screen and (max-width: 768px) {
-    left: -8vw;
-  }
 }
 
 li{
 	position: absolute;
-	left: 50%;
-	top: 50%;
+	// left: 50%;
+	// top: 50%;
 	display: block;
 	background: transparent;
 	border: 3px solid rgb(255,225,213);
@@ -228,11 +218,15 @@ li{
 	border-right-color: transparent;
 	border-radius: 500px;
   transition: all 0.5s ease;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   
 }
 
 li:first-child{
-	margin-left: -130px;
+	// margin-left: -130px;
 	margin-top: -130px;
 	z-index: 2;
 	width: 340px;
@@ -242,13 +236,12 @@ li:first-child{
   @media screen and (max-width: 500px) {
     width: 220px;
     height: 220px;
-    margin-left: -100px;
     margin-top: -100px;
   }
 }
 
 li:nth-child(2){
-	margin-left: -137px;
+	// margin-left: -137px;
 	margin-top: -137px;
 	z-index: 1;
 	width: 370px;
@@ -260,13 +253,12 @@ li:nth-child(2){
   @media screen and (max-width: 500px) {
     width: 270px;
     height: 270px;
-    margin-left: -120px;
     margin-top: -120px;
   }
 }
 
 li:nth-child(3){
-	margin-left: -150px;
+	// margin-left: -150px;
 	margin-top: -150px;
 	z-index: 1;
 	width: 396px;
@@ -277,13 +269,12 @@ li:nth-child(3){
   @media screen and (max-width: 500px) {
     width: 305px;
     height: 305px;
-    margin-left: -140px;
     margin-top: -140px;
   }
 }
 
 li:nth-child(4){
-	margin-left: -170px;
+	// margin-left: -170px;
 	margin-top: -170px;
 	z-index: 1;
 	width: 430px;
@@ -295,7 +286,6 @@ li:nth-child(4){
   @media screen and (max-width: 500px) {
     width: 325px;
     height: 325px;
-    margin-left: -150px;
     margin-top: -150px;
   }
 }
@@ -325,7 +315,7 @@ li:nth-child(4){
 }
 
 #footer  {
-  position: fixed;
+  position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
